{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "66e15dcb-dae5-4546-abc4-ab88040d4f32",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f29370f3-f971-485d-9386-373fb1de1477",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "87c57f62-488b-4c24-a142-afc2757d344a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "7e42558f-45c9-489d-9bb0-18b9428eff9c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "105b7fdf-e7f4-43fa-abe2-d31a615e299d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.01)"
                },
                {
                    "name": "FinishSprint",
                    "type": "Button",
                    "id": "9ada7759-87df-41e1-b934-9be8623fa3ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.01,behavior=1)"
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "09cbe49c-1fdb-4161-a4db-ee09a31ce9c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.01)"
                },
                {
                    "name": "FinishCrouch",
                    "type": "Button",
                    "id": "605ce73d-0bba-4525-bc82-fbe69270ec79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.01,behavior=1)"
                },
                {
                    "name": "Action_1",
                    "type": "Button",
                    "id": "f4985629-edf6-455c-8561-968a7a482ef9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.01)"
                },
                {
                    "name": "ViewObjectives",
                    "type": "Button",
                    "id": "82bafdaa-49a9-499b-84ed-f3e7f5f6eeb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(pressPoint=0.1)"
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "54260ce7-477f-4750-8df8-6dba22e0339d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d61ce1be-65f5-4179-95c3-9d16f2cb1f27",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "bc1dc06a-f02d-419d-bcc4-ae7598bbca56",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a65716cc-6006-4ece-a342-00c664e803fb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5bc24987-f787-4c19-b536-697622c786ee",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "166edbe2-965a-45b0-9d30-34c9e98d08c5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed0d2a56-1f68-46c1-b010-f41d68aee61b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b48d34c-cd52-45dd-9d8f-ae6321b2ccf1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5b75665-a8ae-48fe-98ba-43d2eb300b0f",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "043831c9-ea39-4b6a-b556-0cbf662b411b",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FinishSprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fce0153-8574-4b16-b354-660218317dde",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FinishCrouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84fe5cff-a5e9-41f5-bccc-7dffe1d04164",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ea3fbfa-09a2-4b54-a2af-246ab959e259",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewObjectives",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}